--- a/app/src/main/res/layout/dialog_shared.xml
+++ b/app/src/main/res/layout/dialog_shared.xml
@@ -79,7 +79,7 @@
         android:id="@+id/btn_cancel"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_38"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:gravity="center"
         android:text="@string/cancel"
