--- a/app/src/main/res/layout/dialog_takephoto.xml
+++ b/app/src/main/res/layout/dialog_takephoto.xml
@@ -16,7 +16,7 @@
             android:id="@+id/btn_takeCarama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
             android:paddingBottom="@dimen/dp_15"
@@ -34,7 +34,7 @@
             android:id="@+id/btn_takePhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
+            android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
             android:paddingBottom="@dimen/dp_15"
