--- a/app/src/main/res/layout/fragment_learncenter.xml
+++ b/app/src/main/res/layout/fragment_learncenter.xml
@@ -144,7 +144,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="?attr/selectableItemBackground"
+                            android:background="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:drawableTop="@mipmap/icon_mine_course"
                             android:gravity="center"
@@ -159,7 +159,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="?attr/selectableItemBackground"
+                            android:background="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:drawableTop="@mipmap/icon_errorcenter"
                             android:gravity="center"
@@ -174,7 +174,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:background="?attr/selectableItemBackground"
+                            android:background="?android:attr/selectableItemBackground"
                             android:clickable="true"
                             android:drawableTop="@mipmap/icon_mine_offline"
                             android:gravity="center"
