--- a/app/src/main/res/layout/fragment_questionbank.xml
+++ b/app/src/main/res/layout/fragment_questionbank.xml
@@ -220,7 +220,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackground"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:drawablePadding="@dimen/dp_6"
                     android:drawableTop="@mipmap/icon_qb_evaluation"
@@ -234,7 +234,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackground"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:drawablePadding="@dimen/dp_6"
                     android:drawableTop="@mipmap/icon_qb_errorscenter"
@@ -248,7 +248,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="?attr/selectableItemBackground"
+                    android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:drawablePadding="@dimen/dp_6"
                     android:drawableTop="@mipmap/icon_qb_record"
