--- a/app/src/main/res/layout/item_collection_courselist.xml
+++ b/app/src/main/res/layout/item_collection_courselist.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_69"
-    android:background="?attr/selectableItemBackground"
+    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_horizontal"
