--- a/app/src/main/res/layout/questionbank_loginhome.xml
+++ b/app/src/main/res/layout/questionbank_loginhome.xml
@@ -21,7 +21,7 @@
         android:id="@+id/question_Knowledge_exercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -74,7 +74,7 @@
         android:id="@+id/question_stage_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
@@ -128,7 +128,7 @@
         android:id="@+id/question_elaboration_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/dp_13"
