--- a/app/src/main/res/layout/questionbank_unloginhome.xml
+++ b/app/src/main/res/layout/questionbank_unloginhome.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="horizontal">
