--- a/app/src/main/res/layout/newbieguide.xml
+++ b/app/src/main/res/layout/newbieguide.xml
@@ -14,6 +14,11 @@
         android:layout_marginEnd="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_50"
         android:clickable="true"
+        android:gravity="center"
+        android:text="@string/guide_jump"
+        android:textColor="@android:color/white"
+        android:textSize="@dimen/sp_14"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlCompat" />
