--- a/app/src/main/res/layout/fragment_chiocequestionitem.xml
+++ b/app/src/main/res/layout/fragment_chiocequestionitem.xml
@@ -227,6 +227,7 @@
                 android:id="@+id/question_analysis_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:layout_marginTop="@dimen/dp_14"
                 android:lineSpacingExtra="@dimen/dp_5"
                 android:textColor="@color/color_333333"
@@ -236,7 +237,8 @@
             <ImageView
                 android:id="@+id/question_analysis_image"
                 android:layout_width="@dimen/dp_217"
-                android:layout_height="@dimen/dp_122" />
+                android:layout_height="@dimen/dp_122"
+                android:layout_marginBottom="@dimen/dp_10" />
 
         </LinearLayout>
 
