--- a/dialogtest/src/main/res/drawable/selector_tab_color.xml
+++ b/dialogtest/src/main/res/drawable/selector_tab_color.xml
@@ -1,6 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_checked="true" android:color="@color/colorAccent"/>
-    <item android:state_checked="false" android:color="@color/colorPrimary"/>
-
+    <item android:color="#999999" android:state_checked="false" />
+    <item android:color="#0267FF" android:state_checked="true" />
 </selector>
