--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -22,6 +22,7 @@
             app:srlEnableAutoLoadMore="false"
             app:srlEnableLoadMore="false"
             app:srlHeaderHeight="@dimen/dp_130"
+            app:srlEnableOverScrollDrag="true"
             app:srlHeaderMaxDragRate="1">
             <!--自定义阻尼提示-->
             <TextView
