--- a/app/src/main/res/layout/fragment_coursedirectorylist.xml
+++ b/app/src/main/res/layout/fragment_coursedirectorylist.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srlEnableLoadMore="false"
+        app:srlAccentColor="@android:color/black"
         app:srlPrimaryColor="@color/color_F5F5F5">
 
         <com.ucfo.youcaiwx.widget.customview.LoadingLayout
