--- a/app/src/main/res/layout/fragment_courseintroduction.xml
+++ b/app/src/main/res/layout/fragment_courseintroduction.xml
@@ -25,7 +25,8 @@
 
             <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:overScrollMode="never">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -35,7 +36,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_5"
                         android:background="@android:color/white"
                         android:orientation="vertical"
                         android:paddingEnd="@dimen/dp_12"
