修复学习中心平板变形问题

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,8 +31,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingBottom="@dimen/dp_10">
+                android:orientation="vertical">
                 <!--顶部广告-->
                 <com.youth.banner.Banner
                     android:id="@+id/banner_index"
