--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -523,8 +523,9 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_1"
+                android:layout_marginEnd="@dimen/dp_12"
+                android:layout_marginStart="@dimen/dp_12"
                 android:background="@color/color_F5F5F5" />
         </LinearLayout>
-
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
