--- a/app/src/main/res/layout/titlebar_home.xml
+++ b/app/src/main/res/layout/titlebar_home.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="@dimen/dp_21"
+        android:layout_marginStart="21dp"
         android:text="@string/home_title"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_16"
