--- a/dialogtest/src/main/res/drawable/progressbar_indicator.xml
+++ b/dialogtest/src/main/res/drawable/progressbar_indicator.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <gradient
-                android:angle="180"
-                android:endColor="#fffbac78"
-                android:startColor="#fffc7873"
-                android:type="linear"
-                android:useLevel="true" />
-        </shape>
-    </item>
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="2dp" />
 </shape>
