--- a/dialogtest/src/main/res/layout/fragment_one.xml
+++ b/dialogtest/src/main/res/layout/fragment_one.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E84342">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <com.warkiz.widget.IndicatorStayLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+
+        <com.warkiz.widget.IndicatorSeekBar
+            android:id="@+id/seekbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:isb_indicator_color="@color/color_FF8063"
+            app:isb_indicator_top_content_layout="@layout/custom_top_content_view_round_miles"
+            app:isb_progress="50"
+            app:isb_show_indicator="rounded_rectangle"
+            app:isb_thumb_color="@color/colorPrimary"
+            app:isb_thumb_size="22dp"
+            app:isb_track_background_color="@color/colorPrimary"
+            app:isb_track_progress_color="@color/colorAccent" />
+    </com.warkiz.widget.IndicatorStayLayout>
+</LinearLayout>
