修改论述题自测提交后无答案情况

--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -517,7 +517,7 @@
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
                     android:layout_marginStart="@dimen/dp_5"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
