--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -43,7 +43,7 @@
                 <ImageView
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
@@ -206,7 +206,7 @@
                 <ImageView
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
