--- a/app/src/main/res/layout/item_messagenotification_answer.xml
+++ b/app/src/main/res/layout/item_messagenotification_answer.xml
@@ -125,7 +125,7 @@
             <ImageView
                 android:layout_width="@dimen/dp_16"
                 android:layout_height="@dimen/dp_16"
-                android:src="@mipmap/icon_right_in" />
+                android:src="@drawable/ic_right_in" />
 
         </LinearLayout>
     </com.flyco.roundview.RoundLinearLayout>
