--- a/app/src/main/res/layout/questionbank_loginhome.xml
+++ b/app/src/main/res/layout/questionbank_loginhome.xml
@@ -62,7 +62,7 @@
         <ImageView
             android:layout_width="@dimen/dp_16"
             android:layout_height="@dimen/dp_16"
-            android:src="@mipmap/icon_right_in" />
+            android:src="@drawable/ic_right_in" />
     </LinearLayout>
 
     <View
@@ -115,7 +115,7 @@
         <ImageView
             android:layout_width="@dimen/dp_16"
             android:layout_height="@dimen/dp_16"
-            android:src="@mipmap/icon_right_in" />
+            android:src="@drawable/ic_right_in" />
 
     </LinearLayout>
 
@@ -168,7 +168,7 @@
         <ImageView
             android:layout_width="@dimen/dp_16"
             android:layout_height="@dimen/dp_16"
-            android:src="@mipmap/icon_right_in" />
+            android:src="@drawable/ic_right_in" />
 
     </LinearLayout>
 
