--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -353,7 +353,7 @@
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
                     android:layout_marginStart="@dimen/dp_5"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
@@ -400,7 +400,7 @@
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
                     android:layout_marginStart="@dimen/dp_5"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
@@ -439,7 +439,7 @@
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
                     android:layout_marginStart="@dimen/dp_5"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
@@ -478,7 +478,7 @@
                     android:layout_width="@dimen/dp_16"
                     android:layout_height="@dimen/dp_16"
                     android:layout_marginStart="@dimen/dp_5"
-                    android:src="@mipmap/icon_right_in" />
+                    android:src="@drawable/ic_right_in" />
             </LinearLayout>
 
             <View
