修改了未完成学习计划UI错乱问题

--- a/app/src/main/res/layout/activity_un_finished_plan.xml
+++ b/app/src/main/res/layout/activity_un_finished_plan.xml
@@ -41,7 +41,8 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:overScrollMode="never" />
         </LinearLayout>
     </com.ucfo.youcaiwx.widget.customview.LoadingLayout>
 </LinearLayout>
