--- a/app/src/main/res/layout/item_home_news.xml
+++ b/app/src/main/res/layout/item_home_news.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
+    android:paddingBottom="@dimen/dp_5"
     android:paddingEnd="@dimen/dp_18"
     android:paddingStart="@dimen/dp_12"
+    android:paddingTop="@dimen/dp_5"
     tools:ignore="RtlCompat">
 
     <ImageView
