--- a/app/src/main/res/layout/item_watchrecord.xml
+++ b/app/src/main/res/layout/item_watchrecord.xml
@@ -17,8 +17,7 @@
         android:id="@+id/item_course_image"
         android:layout_width="@dimen/dp_96"
         android:layout_height="@dimen/dp_58"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/banner_default" />
+        android:scaleType="fitXY" />
 
     <LinearLayout
         android:layout_width="0dp"
