--- a/dialogtest/src/main/res/layout/fragment_one.xml
+++ b/dialogtest/src/main/res/layout/fragment_one.xml
@@ -3,11 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_FF8063"
     android:orientation="vertical">
+
 
     <com.warkiz.widget.IndicatorStayLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp">
 
         <com.warkiz.widget.IndicatorSeekBar
             android:id="@+id/seekbar"
@@ -22,4 +25,17 @@
             app:isb_track_background_color="@color/colorPrimary"
             app:isb_track_progress_color="@color/colorAccent" />
     </com.warkiz.widget.IndicatorStayLayout>
+
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+    <Button
+        android:id="@+id/btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="加载图片" />
+
 </LinearLayout>
