Glide3.7.0升级至Glide4.9.0,修复图片框架与Glide4.9.0不兼容问题

--- a/app/src/main/res/xml/file_paths_public.xml
+++ b/app/src/main/res/xml/file_paths_public.xml
@@ -15,7 +15,7 @@
         name="my_images"
         path="Pictures" />
 
-    <!--<external-path
-        name="external_files"
+    <!--<external-path     Pictures
+        name="external_files" Android/data/com.thunder.sample.fileprovider/files/Pictures
         path="." />-->
 </paths>
