--- a/app/src/main/res/layout/activity_personnel_setting.xml
+++ b/app/src/main/res/layout/activity_personnel_setting.xml
@@ -16,9 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingEnd="@dimen/dp_12"
-        android:paddingStart="@dimen/dp_12">
+        android:orientation="vertical">
 
         <LinearLayout
             android:id="@+id/btn_userIcon"
@@ -27,7 +25,9 @@
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_12"
+            android:paddingStart="@dimen/dp_12">
 
             <TextView
                 android:layout_width="0dp"
@@ -62,7 +62,9 @@
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_12"
+            android:paddingStart="@dimen/dp_12">
 
             <TextView
                 android:layout_width="0dp"
@@ -100,7 +102,9 @@
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_12"
+            android:paddingStart="@dimen/dp_12">
 
             <TextView
                 android:layout_width="0dp"
@@ -148,12 +152,15 @@
             android:background="@color/color_E6E6E6" />
 
         <LinearLayout
+            android:id="@+id/btn_phone"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_58"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_12"
+            android:paddingStart="@dimen/dp_12">
 
             <TextView
                 android:layout_width="0dp"
@@ -186,7 +193,9 @@
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/dp_12"
+            android:paddingStart="@dimen/dp_12">
 
             <TextView
                 android:layout_width="0dp"
