--- a/app/src/main/res/layout/questionbank_loginhome.xml
+++ b/app/src/main/res/layout/questionbank_loginhome.xml
@@ -14,6 +14,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_5"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
         android:layout_marginTop="@dimen/dp_10"
         android:background="@color/color_E6E6E6" />
     <!--知识点练习-->
@@ -26,6 +28,8 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/dp_13"
+        android:paddingEnd="@dimen/dp_6"
+        android:paddingStart="@dimen/dp_6"
         android:paddingTop="@dimen/dp_13">
 
         <ImageView
@@ -68,6 +72,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_5"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
         android:background="@color/color_E6E6E6" />
     <!--阶段测试-->
     <LinearLayout
@@ -79,6 +85,8 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/dp_13"
+        android:paddingEnd="@dimen/dp_6"
+        android:paddingStart="@dimen/dp_6"
         android:paddingTop="@dimen/dp_13">
 
         <ImageView
@@ -122,6 +130,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_5"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
         android:background="@color/color_E6E6E6" />
     <!--论述题自测-->
     <LinearLayout
@@ -132,6 +142,8 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingBottom="@dimen/dp_13"
+        android:paddingEnd="@dimen/dp_6"
+        android:paddingStart="@dimen/dp_6"
         android:paddingTop="@dimen/dp_13">
 
         <ImageView
@@ -175,12 +187,16 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_0_5"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
         android:background="@color/color_E6E6E6" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
         android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
