微信分享工具类修改

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -148,7 +148,7 @@
         <attr name="tl_tab_padding" format="dimension" />
         <attr name="tl_tab_space_equal" format="boolean" />
         <attr name="tl_tab_width" format="dimension" />
-        <!-- title -->
+        <!-- defaultTitle -->
         <attr name="tl_textsize" format="dimension" />
         <attr name="tl_textSelectColor" format="color" />
         <attr name="tl_textUnselectColor" format="color" />
