--- a/app/src/main/res/layout/activity_leaning_plan_detail.xml
+++ b/app/src/main/res/layout/activity_leaning_plan_detail.xml
@@ -19,8 +19,7 @@
             android:id="@+id/cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY" />
+            android:layout_centerInParent="true" />
 
         <LinearLayout
             android:id="@+id/holder_linearlayout"
